syntax = "proto3";

package billingService;

option java_multiple_files = true;
option java_package = "billing";
option java_outer_classname = "BillingServiceOuterClass";


service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string userId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
  int32 price = 3;
}